# reel-studio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: automerge.yml
examples/: demo_client.py  react_churn.html
reel_studio/: engine.py  render.py  schema.py  server.py  store.py  tts.py
video_director/: __init__.py  engine.py  render.py  server.py  tts.py
