[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-director"
version = "0.1.0"
description = "MCP server for directing narrated browser screen recordings"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "playwright",
  "edge-tts",
  "pydantic>=2",
]

[tool.setuptools.packages.find]
include = ["video_director*"]
