[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-studio"
version = "0.1.0"
description = "MCP server for directing narrated browser screen recordings"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "playwright",
  "edge-tts",
  "pydantic>=2",
  "uvicorn",
]

[tool.setuptools.packages.find]
include = ["reel_studio*"]
